--- a/src/examples/hash/Makefile
+++ b/src/examples/hash/Makefile
@@ -16,17 +16,17 @@ all:	libhash.a _hash_dyn
 endif
 
 libhash.a: $(HASHES) hash.c
-	$(CC) $(LIB_CFLAGS) $(HASHES) hash.c -c
-	$(AR) $(AR_FLAGS) libhash.a *.o
-	$(RANLIB) $(RANLIB_FLAGS) libhash.a
+	$(VERBOSE_MAKE)$(CROSS_COMPILE)$(CC) $(LIB_CFLAGS) $(HASHES) hash.c -c
+	$(VERBOSE_MAKE)$(CROSS_COMPILE)$(AR) $(AR_FLAGS) libhash.a *.o
+	$(VERBOSE_MAKE)$(CROSS_COMPILE)$(RANLIB) $(RANLIB_FLAGS) libhash.a
 
 _hash:
-	$(CC) $(BIN_CFLAGS) -DHASH $(HASHES) hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o hash
+	$(VERBOSE_MAKE)$(CROSS_COMPILE)$(CC) $(BIN_CFLAGS) -DHASH $(HASHES) hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBSIGN) -o hash
 
 # If the user asked for dynamic libraries, compile versions of our binaries against them
 ifeq ($(WITH_DYNAMIC_LIBS),1)
 _hash_dyn: _libhash
-	$(CC) $(BIN_CFLAGS) -DHASH $(HASHES) hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o hash_dyn
+	$(VERBOSE_MAKE)$(CROSS_COMPILE)$(CC) $(BIN_CFLAGS) -DHASH $(HASHES) hash.c $(ROOT_DIR)/src/external_deps/print.c $(ROOT_DIR)/src/external_deps/rand.c $(BIN_LDFLAGS) $(LIBEC) -L$(BUILD_DIR) -lsign -o hash_dyn
 endif
 
 
