--- a/.github/workflows/libecc_compilation_tests.yml
+++ b/.github/workflows/libecc_compilation_tests.yml
@@ -4,7 +4,7 @@ name: libecc
 on: push
 
 jobs:
-  basic_tests:
+  compilation_tests:
     runs-on: ubuntu-latest
     strategy:
       #max-parallel: 10
