Try to fix the crossarch runner.

--- a/.github/workflows/libecc_crossarch_tests.yml
+++ b/.github/workflows/libecc_crossarch_tests.yml
@@ -35,7 +35,7 @@ jobs:
           # Here because of a broken wine32 dependency in ubuntu-latest (see https://github.com/actions/virtual-environments/issues/4589)
           sudo apt-get install -yqq --allow-downgrades libpcre2-8-0/focal libpcre2-16-0/focal libpcre2-32-0/focal libpcre2-posix2/focal
           sudo dpkg --add-architecture i386;
-          sudo apt-get -y install qemu-user-static wine-stable wine32 wine64;
+          sudo apt-get -y install qemu-user-static wine-stable;
           # Cross build jobs
           docker pull multiarch/crossbuild;
           sh scripts/crossbuild.sh -triplet "${CROSS_TARGET}" "${CROSS_SIZE}";
