--- a/.github/workflows/libecc_crossarch_tests.yml
+++ b/.github/workflows/libecc_crossarch_tests.yml
@@ -5,7 +5,7 @@ on: push
 
 jobs:
   cross_arch_tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       #max-parallel: 10
       matrix:
