--- a/.github/workflows/libecc_crossarch_tests.yml
+++ b/.github/workflows/libecc_crossarch_tests.yml
@@ -15,6 +15,11 @@ jobs:
         cross_target: [arm-linux-gnueabi, arm-linux-gnueabihf, aarch64-linux-gnu, powerpc64le-linux-gnu, mipsel-linux-gnu, i686-w64-mingw32, x86_64-w64-mingw32, i386-apple-darwin, x86_64-apple-darwin, x86_64h-apple-darwin]
         cross_size: [16, 32, 64]
     steps:
+      # Add swap because of possible out of memory issues
+      - name: Set Swap Space
+        uses: pierotofy/set-swap-space@master
+        with:
+          swap-size-gb: 10
       # Checkout repository
       - name: checkout repository
         uses: actions/checkout@v2
