Add OpenMP parallelization when asked for Wycheproof test cases.

--- a/src/wycheproof_tests/Makefile
+++ b/src/wycheproof_tests/Makefile
@@ -3,7 +3,7 @@ ROOT_DIR=../..
 BUILD_DIR=$(ROOT_DIR)/build
 include $(ROOT_DIR)/common.mk
 
-ifeq ($(VERBOSE), 1)
+ifeq ($(VERBOSE_ACCEPTABLE), 1)
 CFLAGS += -DVERBOSE_ACCEPTABLE
 endif
 
