Add the deterministic (pseudo-)random scalars generation in BIP0340 for batch verification (this makes use of the ChaCha20 CSPRNG seeded by a key derived from the signatures/messages/public keys).
Please note that the confidentiality of such scalars is not a purpose here,
as these scalars are public. Only their deterministic uniform generation
between 1 and the order q is important.

--- a/.github/workflows/libecc_runtime_tests.yml
+++ b/.github/workflows/libecc_runtime_tests.yml
@@ -10,7 +10,7 @@ jobs:
       #max-parallel: 10
       matrix:
         cc: [gcc, clang]
-        blinding: [0, 1]
+        blinding: [1]
         cryptofuzz: [1]
     steps:
       # Checkout repository
