--- a/.github/workflows/libecc_compilation_tests.yml
+++ b/.github/workflows/libecc_compilation_tests.yml
@@ -5,7 +5,7 @@ on: push
 
 jobs:
   compilation_tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       #max-parallel: 10
       matrix:
