--- a/.github/workflows/libecc_examples.yml
+++ b/.github/workflows/libecc_examples.yml
@@ -5,7 +5,7 @@ on: push
 
 jobs:
   examples:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       #max-parallel: 10
       matrix:
