--- a/.github/workflows/libecc_runtime_tests.yml
+++ b/.github/workflows/libecc_runtime_tests.yml
@@ -30,6 +30,9 @@ jobs:
           WORDSIZE: ${{ matrix.wordsize }}
         shell: bash
         run: |
+          # Install OpenMP
+          sudo apt-get update;
+          sudo apt-get -y install libomp-dev;
           # Vanilla tests
           #
           make "${WORDSIZE}" && ./build/ec_self_tests vectors rand;
